Assignment Submission - I could not figure out how to align the layout. I commented out my added code so that the project compiles, but I believe I am on the right track.

--- a/app/src/main/res/layout/heart_rate_row.xml
+++ b/app/src/main/res/layout/heart_rate_row.xml
@@ -6,14 +6,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="16dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Pulse: " />
 
     <TextView
         android:id="@+id/textViewPulse"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
+
 </LinearLayout>
